@@ -1,7 +1,8 @@
 package de.kiaim.platform.model;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import de.kiaim.platform.json.DataSetSerializer;
 import de.kiaim.platform.model.data.Data;
 import de.kiaim.platform.model.data.DataRow;
 import de.kiaim.platform.model.data.configuration.DataConfiguration;
@@ -13,27 +14,29 @@ import lombok.Getter;
 import lombok.ToString;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @AllArgsConstructor
 @EqualsAndHashCode
 @ToString
+@JsonSerialize(using = DataSetSerializer.class)
 public class DataSet {
 
 	@JsonIgnore
 	final List<DataRow> dataRows;
 
 	@Schema(description = "Metadata of the data")
+	@Getter
 	final DataConfiguration dataConfiguration;
 
 	@ArraySchema(schema = @Schema(description = "Row of the data set.", implementation = DataRow.class))
-	@JsonProperty("data")
 	public final List<List<Object>> getData() {
 		return dataRows.stream()
 		               .map(dataRow -> dataRow.getData()
 		                                      .stream()
 		                                      .map(Data::getValue)
-		                                      .toList())
+		                                      .collect(Collectors.toList()))
 		               .toList();
 	}
 }
